fixed z-index issue with parts tiles and dropdown menus

--- a/app/client/stylesheets/components/pu-header.sass
+++ b/app/client/stylesheets/components/pu-header.sass
@@ -4,6 +4,7 @@
     background-color: $color-primary
     color: $color-text-inverted
     height: 60px
+    z-index: 5
     @extend %clearfix
 
     > section
